--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,20 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labeled data format\n",
+    "\n",
+    "\"annotation_id\",\"annotator\",\"created_at\",\"id\",\"image\",\"label\",\"lead_time\",\"updated_at\"\n",
+    "\n",
+    "# Label format\n",
+    "{'x': 79.58387516254876, 'y': 38.621586475942784, 'width': 20.0260078023407, 'height': 23.5370611183355, 'rotation': 0, 'rectanglelabels': ['PS2'], 'original_width': 800, 'original_height': 800}\n",
+    "\n",
+    "X and Y are the coordinates of the top left corner of the bounding box."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"A\")"
+    "import tensorflow as tf\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import json\n",
+    "import cv2\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "df = pd.read_csv('./content/labeled_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fix img paths\n",
+    "def fix_path(img_path):\n",
+    "    base_name = os.path.basename(img_path)\n",
+    "    return base_name.split('-')[-1]\n",
+    "\n",
+    "df['image'] = df['image'].apply(fix_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LABELS = ['AUDIO', 'AUDIO_INPUT', 'AUDIO_OUTPUT', 'DISPLAYPORT', 'DVI', 'ETHERNET', 'HDMI', 'PARALLEL', 'POWER', 'PS', 'PS2', 'USB', 'USBC', 'VGA']"
    ]
   }
  ],
@@ -34,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
