--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import xml\n",
+    "import wget\n",
     "import shutil\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +79,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for path in paths.values():\n",
-    "    if not os.path.exists(path):\n",
-    "        if os.name == 'posix':\n",
-    "            !mkdir -p {path}\n",
-    "        if os.name == 'nt':\n",
-    "            !mkdir {path}"
+    "import object_detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = []\n",
+    "\n",
+    "for label in LABELS:\n",
+    "    labels.append({\n",
+    "        'name': label,\n",
+    "        'id': len(labels)+1\n",
+    "    })\n",
+    "\n",
+    "with open(files['LABELMAP'], 'w') as f:\n",
+    "    for label in labels:\n",
+    "        f.write('item { \\n')\n",
+    "        f.write('\\tname:\\'{}\\'\\n'.format(label['name']))\n",
+    "        f.write('\\tid:{}\\n'.format(label['id']))\n",
+    "        f.write('}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from object_detection.utils import config_util\n",
+    "from object_detection.protos import pipeline_pb2\n",
+    "from google.protobuf import text_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = config_util.get_configs_from_pipeline_file(files['PIPELINE_CONFIG'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_config = pipeline_pb2.TrainEvalPipelineConfig()\n",
+    "with tf.io.gfile.GFile(files['PIPELINE_CONFIG'], \"r\") as f:                                                                                                                                                                                                                     \n",
+    "    proto_str = f.read()                                                                                                                                                                                                                                          \n",
+    "    text_format.Merge(proto_str, pipeline_config)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_config.model.ssd.num_classes = len(labels)\n",
+    "pipeline_config.train_config.batch_size = 4\n",
+    "pipeline_config.train_config.fine_tune_checkpoint = os.path.join(paths['PRETRAINED_MODEL_PATH'], PRETRAINED_MODEL_NAME, 'checkpoint', 'ckpt-0')\n",
+    "pipeline_config.train_config.fine_tune_checkpoint_type = \"detection\"\n",
+    "pipeline_config.train_input_reader.label_map_path= files['LABELMAP']\n",
+    "pipeline_config.train_input_reader.tf_record_input_reader.input_path[:] = [os.path.join(paths['ANNOTATION_PATH'], 'train.record')]\n",
+    "pipeline_config.eval_input_reader[0].label_map_path = files['LABELMAP']\n",
+    "pipeline_config.eval_input_reader[0].tf_record_input_reader.input_path[:] = [os.path.join(paths['ANNOTATION_PATH'], 'test.record')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_text = text_format.MessageToString(pipeline_config)                                                                                                                                                                                                        \n",
+    "with tf.io.gfile.GFile(files['PIPELINE_CONFIG'], \"wb\") as f:                                                                                                                                                                                                                     \n",
+    "    f.write(config_text)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAINING_SCRIPT = os.path.join(paths['APIMODEL_PATH'], 'research', 'object_detection', 'model_main_tf2.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"python {} --model_dir={} --pipeline_config_path={} --num_train_steps=2000\".format(TRAINING_SCRIPT, paths['CHECKPOINT_PATH'],files['PIPELINE_CONFIG'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python Tensorflow\\models\\research\\object_detection\\model_main_tf2.py --model_dir=Tensorflow\\workspace\\models\\port_interface_model --pipeline_config_path=Tensorflow\\workspace\\models\\port_interface_model\\pipeline.config --num_train_steps=2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"python {} --model_dir={} --pipeline_config_path={} --checkpoint_dir={}\".format(TRAINING_SCRIPT, paths['CHECKPOINT_PATH'],files['PIPELINE_CONFIG'], paths['CHECKPOINT_PATH'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python Tensorflow\\models\\research\\object_detection\\model_main_tf2.py --model_dir=Tensorflow\\workspace\\models\\port_interface_model --pipeline_config_path=Tensorflow\\workspace\\models\\port_interface_model\\pipeline.config --checkpoint_dir=Tensorflow\\workspace\\models\\port_interface_model\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(command)"
    ]
   }
  ],
